@@ -4,6 +4,7 @@
 
 use 5.008;
 use strict;
+use warnings;
 use ExtUtils::MakeMaker;
 use Cwd;
 use File::Spec;
@@ -12,8 +13,8 @@ use File::Spec;
 our %build_reqs = (
 	'perl-ExtUtils-Depends'   => '0.1',
 	'perl-ExtUtils-PkgConfig' => '0.1',
-	'perl-Glib'               => '1.00rc1',
-	'perl-Gtk2'               => '1.00rc1',
+	'perl-Glib'               => '1.00',
+	'perl-Gtk2'               => '1.00',
 	'Gnome'                   => '2.0.0',
 	'Bonobo'                  => '2.0.0',
 );
@@ -28,19 +29,20 @@ our %runtime_reqs = (
 unless (eval "use ExtUtils::Depends;"
            . "use ExtUtils::PkgConfig;"
 	   . "use Gtk2::CodeGen;"
+           . "use Glib::MakeHelper;" # for do_pod_files()
            # just seeing if Glib is available isn't enough, make sure
            # it's recent enough, too 
-           . "use Glib '$build_reqs{'perl-Glib'}';"
-           . "use Gtk2 '$build_reqs{'perl-Gtk2'}';"
+           . "use Glib atleast => '$build_reqs{'perl-Glib'}';"
+           . "use Gtk2 atleast => '$build_reqs{'perl-Gtk2'}';"
            . "1") {
    warn "$@\n";
    WriteMakefile(
          PREREQ_FATAL => 1,
          PREREQ_PM    => {
-            Glib::                => $build_reqs{'perl-Glib'},
-            Gtk2::                => $build_reqs{'perl-Gtk2'},
-            ExtUtils::Depends::   => $build_reqs{'perl-ExtUtils-Depends'},
-            ExtUtils::PkgConfig:: => $build_reqs{'perl-ExtUtils-PkgConfig'},
+            'Glib'                => $build_reqs{'perl-Glib'},
+            'Gtk2'                => $build_reqs{'perl-Gtk2'},
+            'ExtUtils::Depends'   => $build_reqs{'perl-ExtUtils-Depends'},
+            'ExtUtils::PkgConfig' => $build_reqs{'perl-ExtUtils-PkgConfig'},
          },
    );
    exit 1; # not reached
@@ -60,6 +62,21 @@ my %cfgs = (
 );
 
 mkdir 'build', 0777;
+
+our @xs_files = <xs/*.xs>;
+our %pod_files = (
+	'Gnome2.pm' => '$(INST_MAN3DIR)/Gnome2.$(MAN3EXT)',
+	# we will be installing a whole slew of pod files, generated directly
+	# from the xs source -- but to have them installed and manified
+	# properly, we have to know their names at Makefile.PL time.
+	#   This is a bit of a chicken and egg problem, and this solution
+	# basically means that if you create a new package name in the xs
+	# code, you'll need to re-run Makefile.PL.  you already need to
+	# re-run to pick up new XS files, so that's not such a big deal. 
+	Glib::MakeHelper->do_pod_files (@xs_files),
+);
+	
+Glib::MakeHelper->do_pod_files (@xs_files),
 
 #
 # autogeneration
@@ -92,7 +109,7 @@ close VERSION;
 my $gnome2 = ExtUtils::Depends->new ('Gnome2', 'Gtk2', 'Glib');
 $gnome2->set_inc ($gnome_pkgcfg{cflags} . " " . $bonobo_pkgcfg{cflags});
 $gnome2->set_libs ($gnome_pkgcfg{libs} . " " . $bonobo_pkgcfg{libs});
-$gnome2->add_xs (<xs/*.xs>);
+$gnome2->add_xs (@xs_files);
 $gnome2->add_pm ('Gnome2.pm' => '$(INST_LIBDIR)/Gnome2.pm');
 $gnome2->add_typemaps (map {File::Spec->catfile(cwd(), $_)} 'build/gnome2perl.typemap', 'gnome2perl.typemap');
 $gnome2->add_headers ('gnome2perl.h');
@@ -107,6 +124,7 @@ WriteMakefile(
     VERSION_FROM    => 'Gnome2.pm', # finds $VERSION
     ABSTRACT_FROM   => 'Gnome2.pm', # retrieve abstract from module
     XSPROTOARG      => '-noprototypes',
+    MAN3PODS        => \%pod_files,
     $gnome2->get_makefile_vars,
 );
 
@@ -126,42 +144,17 @@ sub const_cccmd {
 
 sub postamble
 {
-	my @dirs = qw{rpms rpms/BUILD rpms/RPMS rpms/SOURCES
-		      rpms/SPECS rpms/SRPMS};
-	my $cwd = getcwd();
-
-	my %subs = (
-		'VERSION' => '$(VERSION)',
-		'SOURCE' => '$(DISTNAME)-$(VERSION).tar.gz',
-		'GNOME_RUN' => $runtime_reqs{'Gnome'},
-		'GNOME' => $build_reqs{'Gnome'},
-		'PERL_EXTUTILS_DEPENDS' => 
-			$build_reqs{'perl-ExtUtils-Depends'},
-		'PERL_EXTUTILS_PKGCONFIG' => 
-			$build_reqs{'perl-ExtUtils-PkgConfig'},
-		'PERL_GLIB' => $build_reqs{'perl-Glib'},
-		'PERL_GTK' => $build_reqs{'perl-Gtk2'},
-	);
-
-	my $substitute = '$(PERL) -npe \''.join('; ', map {
-			"s/\\\@$_\\\@/$subs{$_}/g";
-		} keys %subs).'\'';
-
-	"
-realclean ::
-	-\$(RM_RF) build perl-\$(DISTNAME).spec
-
-rpms/:
-	-mkdir @dirs
-
-SUBSTITUTE=$substitute
-
-perl-\$(DISTNAME).spec: perl-\$(DISTNAME).spec.in \$(VERSION_FROM) Makefile
-	\$(SUBSTITUTE) \$< > \$@
-
-dist-rpms: Makefile dist perl-\$(DISTNAME).spec rpms/
-	cp \$(DISTNAME)-\$(VERSION).tar.gz rpms/SOURCES/
-	rpmbuild -ba --define \"_topdir $cwd/rpms\" perl-\$(DISTNAME).spec
-"
+	return Glib::MakeHelper->postamble_clean ()
+	     . Glib::MakeHelper->postamble_docs (@main::xs_files)
+	     . Glib::MakeHelper->postamble_rpms (
+			'GNOME_RUN' => $runtime_reqs{'Gnome'},
+			'GNOME' => $build_reqs{'Gnome'},
+			'PERL_EXTUTILS_DEPENDS' => 
+				$build_reqs{'perl-ExtUtils-Depends'},
+			'PERL_EXTUTILS_PKGCONFIG' => 
+				$build_reqs{'perl-ExtUtils-PkgConfig'},
+			'PERL_GLIB' => $build_reqs{'perl-Glib'},
+			'PERL_GTK' => $build_reqs{'perl-Gtk2'},
+		);
 }
 package MAIN;
